Fix: gap between images on view-section

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,7 +18,7 @@
     width: 100%;
     height: 90vh;
     background-color: black;
-    padding: 80px;
+    padding: 60px;
     flex-wrap: wrap;
     overflow: auto;
     gap: 20px 10px;
